overflow fix

--- a/app/views/stylesheets/main.sass
+++ b/app/views/stylesheets/main.sass
@@ -25,6 +25,7 @@ body
   .message_block
     line-height: 21px
     padding: 10px
+    overflow: hidden
     padding-top: 20px
     border: 1px solid #ccc
     font-size: 16px
